[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itunes_search"
version = "0.3.1"
authors = [
    {name = "Christopher Toth"},
]
description = "Simple wrapper over the iTunes search API"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests",
]

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportMissingTypeStubs = false
reportMissingImports = "error"
exclude = [
    "**/__pycache__",
    ".git",
]
